# robotics-arm-controller

./: .gitignore  README.md  config.json  pyproject.toml
docs/: grex_location_data.csv  module_data.csv
robotics_technical_challenge/: main.py
robotics_technical_challenge/src/: dashboard_client.py  dummy_dashboard_server.py  path_planning.py  tests.py
