[tool.poetry]
name = "robotics-technical-challenge"
version = "0.1.0"
description = ""
authors = ["Emran Billah <omegaregions0072004@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
